# deck

./: .dockerignore  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  eslint.config.js  go.work  go.work.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: client-build.yml  client-release.yml  client-signing-check.yml  docker-desktop-images.yml  landing-image.yml  landing-pages-deploy.yml
.x/: README.md  coding-standards.md  guide-api.md  guide-client.md  guide-dashboard.md  guide-frontend.md  guide-packages.md  guide-pilot.md  guide-python.md  guide-runtime-go.md  module-status.md  project-overview.md
.x/v0.1/: README.md  architecture-design.md  product-design.md
apps/api/: .env.example  README.md  drizzle.config.ts  package.json  test-setup.ts  tsconfig.json
apps/cli/: README.md  go.mod  go.sum
apps/client/: README.md  package.json  postcss.config.js  tsconfig.json  vite.config.ts
apps/client/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
apps/client/src-tauri/capabilities/: default.json
apps/client/src-tauri/icons/: icon.icns
apps/client/src-tauri/src/: api_log.rs  credential_store.rs  lib.rs  main.rs  sse_trace.rs
apps/client/src-tauri/src/opencode_bridge/: context.rs  http_io.rs  lifecycle.rs  mod.rs  proxy.rs  routing.rs
apps/client/src-tauri/src/pilot_runtime/: bridge.rs  health_normalize.rs  host.rs  manager.rs  mod.rs  server.rs
apps/client/src-tauri/src/sandbox/: config.rs  docker.rs  mod.rs
apps/dashboard/: README.md  index.html  orval.config.ts  package.json  postcss.config.js  tsconfig.json  vite.config.ts
apps/landing/: README.md  index.html  package.json  postcss.config.js  tsconfig.json  vite.config.ts
apps/server-go/: README.md
apps/server-py/: README.md  hello.py  (+1 more)
hack/: install-pilot-bridge.sh
scripts/: build.js  build_package.js  check_docs_entry.mjs  copy_files.js  generate_client.js
(+632 files in other folders)
