[package]
name = "Deck"
version = "0.0.1"
description = "Deck Client"
authors = ["cofy-x"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "deck_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
base64 = "0.22"
reqwest = { version = "0.12.28", default-features = false, features = [
    "rustls-tls",
    "stream",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "net", "process", "rt", "sync", "time"] }
ureq = { version = "2.10", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
